tester/testsuite/bad/bad050.jl
int main() { 
   int !a;
   return 1;
}
